; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/lets_split/keymaps/OLED_sample/extr_keymap.c_matrix_update.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/lets_split/keymaps/OLED_sample/extr_keymap.c_matrix_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CharacterMatrix = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @matrix_update(%struct.CharacterMatrix* %0, %struct.CharacterMatrix* %1) #0 {
  %3 = alloca %struct.CharacterMatrix*, align 8
  %4 = alloca %struct.CharacterMatrix*, align 8
  store %struct.CharacterMatrix* %0, %struct.CharacterMatrix** %3, align 8
  store %struct.CharacterMatrix* %1, %struct.CharacterMatrix** %4, align 8
  %5 = load %struct.CharacterMatrix*, %struct.CharacterMatrix** %3, align 8
  %6 = getelementptr inbounds %struct.CharacterMatrix, %struct.CharacterMatrix* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.CharacterMatrix*, %struct.CharacterMatrix** %4, align 8
  %9 = getelementptr inbounds %struct.CharacterMatrix, %struct.CharacterMatrix* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @memcmp(i32 %7, i32 %10, i32 4)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %23

13:                                               ; preds = %2
  %14 = load %struct.CharacterMatrix*, %struct.CharacterMatrix** %3, align 8
  %15 = getelementptr inbounds %struct.CharacterMatrix, %struct.CharacterMatrix* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.CharacterMatrix*, %struct.CharacterMatrix** %4, align 8
  %18 = getelementptr inbounds %struct.CharacterMatrix, %struct.CharacterMatrix* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @memcpy(i32 %16, i32 %19, i32 4)
  %21 = load %struct.CharacterMatrix*, %struct.CharacterMatrix** %3, align 8
  %22 = getelementptr inbounds %struct.CharacterMatrix, %struct.CharacterMatrix* %21, i32 0, i32 0
  store i32 1, i32* %22, align 4
  br label %23

23:                                               ; preds = %13, %2
  ret void
}

declare dso_local i64 @memcmp(i32, i32, i32) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
